fix bug that image was not downloaded on mobile and few improvements

--- a/src/components/Settlement.scss
+++ b/src/components/Settlement.scss
@@ -19,3 +19,7 @@ $button-color: $coral;
 .report-container {
   margin: -10px;
 }
+
+#transaction-table {
+  margin-bottom: 0px;
+}
